tests/error/typ_forcing/ret.mml
let f (x: bool) : bool = x in - (f true)
